resources_eti-prod-runtime-01-02/codefresh-delivery-pipelines.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-delivery-pipelines
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/demotest
            backend:
              service:
                name: demotest-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/test123
            backend:
              service:
                name: test123-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/test2
            backend:
              service:
                name: test2-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/test3
            backend:
              service:
                name: test3-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
